testcases/error/mismatch_assignment.veryl
module mismatch_assignment {
    let a : logic = 1;
    let _b: bit   = a;
}
